--- a/i18n/templates/4-index.html
+++ b/i18n/templates/4-index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>{{ _('home_title') }}</title>
-</head>
-
-<body>
-    <h1>{{ _('home_header') }}</h1>
-</body>
-
+<html>
+  <head>
+    <title>{{ gettext('home_title') }}</title>
+  </head>
+  <body>
+    <h1>{{ gettext('home_header') }}</h1>
+  </body>
 </html>
