--- a/i18n/templates/6-index.html
+++ b/i18n/templates/6-index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>{{ _('home_title') }}</title>
-</head>
-
-<body>
-    <h1>{{ _('home_header') }}</h1>
+<html>
+  <head>
+    <title>{{ gettext('home_title') }}</title>
+  </head>
+  <body>
+    <h1>{{ gettext('home_header') }}</h1>
     {% if g.user %}
-    <p>{{ _('logged_in_as', username=g.user.name) }}</p>
-    {% else %}
-    <p>{{ _('not_logged_in') }}</p>
+      <p>{{ gettext('logged_in_as', username=g.user.name) }}</p>
+    {% else %} 
+      <p>{{ gettext('not_logged_in') }}</p>
     {% endif %}
-</body>
-
+  </body>
 </html>
